# embed_monarch

./: .cruft.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
docs/: conf.py  index.rst
src/embed_monarch/: __init__.py  cli.py  deepwalk_embedding.yaml  embed_monarch.ipynb  line_embedding.yaml
tests/: __init__.py  demo_test.py
